--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
       <div id="container">
         <h1>ADD A SUPERHERO</h1>
         <form action="">
-          <input type="text" id="superHero" placeholder="Superhero" />
-          <input type="text" id="fullName" placeholder="Full Name" />
-          <input type="text" id="superPower" placeholder="Superpower" />
+          <input type="text" id="superHero" placeholder="Superhero" required />
+          <input type="text" id="fullName" placeholder="Full Name" required />
+          <input type="text" id="superPower" placeholder="Superpower" required />
           <input type="number" id="age" placeholder="Age" />
-          <input type="text" id="home" placeholder="Planet or Hometown" />
-          <textarea
-            name="" id="quote" cols="5" rows="4" placeholder="A famous quote by this Superhero"></textarea>
-          <input type="url" name="" id="imgUrl" placeholder="Image URL" />
+          <input type="text" id="home" placeholder="Planet or Hometown" required />
+          <textarea name="" id="quote" cols="5" rows="4" placeholder="A famous quote by this Superhero"></textarea>
+          <input type="url" name="" id="imgUrl" placeholder="Image URL" required />
           <input type="submit" id="btn" value="SUBMIT" />
         </form>
       </div>
