Black Panther card as example

--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
           <input type="submit" id="btn" value="SUBMIT" />
         </form>
       </div>
+      <figure class="card panther" >
+        <h1 style="color: #fff; text-align: center;">R . I . P</h1>
+        <div id="card">
+            <img src="assets/img/blackpanther.gif" alt="" /> 
+            <figcaption>
+                <h2>Black Panther</h2>
+                <h3>King T'Challa Udaku</h3>
+                <h3>Bad ass Suite / MMA</h3>
+                <h3>33</h3>
+                <h3>Wakanda</h3>
+                <p><b>"Wakanda forever!"</b></p>
+            </figcaption>
+          </div>
+    </figure>
       <section class="gallery">
         <div id="scrolling-wrapper">
         </div>
